<resources>
    <string name="app_name">BotChat</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>

    <!-- MessageService -->
    <string name="service_message_description">Send and receive messages.</string>

    <!-- Register-->
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_sign_up">Sign Up</string>
    <string name="register_enter_phone_number">Enter your phone number</string>
    <string name="register_select_country">Select Country</string>
    <string name="register_send_code">SEND CONFIRMATION CODE</string>

    <!-- NewChat -->
    <string name="new_chat_search_hint">Type a name</string>

    <!-- AddContact -->
    <string name="add_contact_hint">Enter iChat ID</string>
    <string name="add_contact_subtitle">Enter someone\'s ID to find them on iChat.</string>
    <string name="add_contact_button">Add</string>
    <string name="otp_enter_otp">Enter the 6-digit OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="keyboard_hint">Write a message…</string>
    <string name="search">Search</string>

    <!-- Chat states -->
    <string name="chat_presence_online">Online</string>
    <string name="chat_presence_away">last seen %1$s</string>
    <string name="chat_state_typing">typing…</string>

    <!-- Settings -->
    <string name="settings_app_version">%1$s for Android v%2$s</string>


    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>

    <string name="name_on_card">Name On Card</string>
    <string name="card_number_format">xxxx-xxxx-xxxx-xxxx</string>
    <string name="cvv">CVV</string>
    <string name="month_format">MM</string>
    <string name="year_format">YYYY</string>
    <string name="expires">Expires:</string>
    <string name="pay_now">PAY NOW</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="save_card">Save card for faster checkouts.</string>
    <string name="enable_one_click_checkout">Enable one click checkout.</string>

    <string name="choose_bank">Choose Your Bank</string>
    <string name="select_bank">Select Other Banks</string>
    <string name="bank_prompt">Select your Bank</string>
    <string name="redirection_text">You will be redirected to your banks website to  complete payment</string>
    <string name="axis_bank">AXIS</string>
    <string name="hdfc">HDFC</string>
    <string name="citi">CITI</string>
    <string name="sbi">SBI</string>
    <string name="icici">ICICI</string>

    <string-array name="bank_names">
        <item>State Bank Of India</item>
        <item>HDFC</item>
        <item>CITI</item>
        <item>ICICI</item>
        <item>Kotak Mahindra</item>
        <item>Canara Bank</item>
        <item>Axis Bank</item>
        <item>State Bank of Hyderabad</item>
        <item>State Bank Of Mysore</item>
        <item>Central Bank of India</item>
        <item>Yes Bank</item>
        <item>Bank Of India</item>
    </string-array>


    <string name="text_enter_cvv">Please enter your CVV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardType_prompt">Select Card Type</string>
    <string-array name="card_types">
        <item>VISA</item>
        <item>MASTER</item>
        <item>MASTERO</item>

    </string-array>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="cancel">Cancel</string>

    <string name="vpa_text_more">VPA is your Virtual Payment Address in the format yourname@bankname.\n\n You can create your VPA from any UPI enabled Bank application or third party application. You need the Bank application installed in your phone to complete this transaction.</string>
    <string name="vpa_text_less">VPA is your Virtual Payment Address in the format yourname@bankname.</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>

    <string name="enter_vpa">Enter VPA</string>
    <string name="vpa_text">yourname@bankname</string>
    <string name="learn_upi">Learn how UPI works</string>

    <!-- <string name="error_vpa_length">Please enter a valid VPA Maximum length allowed is 50 characters</string>-->
    <string name="error_invalid_vpa">Invalid VPA</string>
    <string name="error_fill_vpa">Please fill VPA</string>


    <string name="close_image">Close helper</string>
    <string name="helper_image">UPI Helper Image</string>

    <string name="could_not_receive_data">Could not receive data</string>
    <string name="Page7Title">BotChat</string>
    <string name="Page6Title">Recharge</string>
    <string name="Page5Title">Discover Bots</string>
    <string name="Page5Message">Discover over 100+ bots for any service.</string>
    <string name="Page6Message">Recharge, pay bills, book tickets, cabs through chat</string>
    <string name="Page7Message">Talk to any bot in the world.</string>
</resources>