<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_enter_phone_number"
        android:id="@+id/tv_register_enter_mobile"
        android:textSize="18dp"
        android:textColor="#000000"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="23dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dropdown_register_country_code"
        android:spinnerMode="dropdown"
        android:entries="@array/register_country_codes"
        android:prompt="@string/register_select_country"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:paddingLeft="0dp"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/et_signup_mobile"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="5dp"
        android:shadowColor="#3cb2e2"
        android:singleLine="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register_send_code"
        android:id="@+id/btn_register_send_confirmation"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#26353b"
        android:textColor="#ffffff"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="18dp"
        android:typeface="sans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stairway will send a one-time SMS message to your verify your phone number. Carrier charges may apply."
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:textColor="#4d000000"
        android:textSize="13dp" />

</LinearLayout>