<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fl_add_contact"
    android:fitsSystemWindows="true"
    android:background="#80000000">

    <RelativeLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="328dp"
        android:layout_height="188dp"
        android:id="@+id/rl_add_contact_content"
        android:background="@drawable/bg_popup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20.5sp"
                android:id="@+id/add_contact_title"
                android:text="Add a new contact"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/add_contact_title"
                android:textSize="18sp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:enabled="true"
                android:hint="@string/add_contact_hint"
                android:textColorHint="#9E9E9E"
                android:id="@+id/et_add_contact">
                <requestFocus/>
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_add_contact"
                android:id="@+id/add_contact_message"
                android:text="@string/add_contact_subtitle"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:text="@string/add_contact_button"
                android:textColor="#FFFFFF"
                android:id="@+id/btn_add_contact"
                android:textAllCaps="true"
                android:background="@color/colorPrimary"
                android:layout_gravity="bottom|right"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textSize="15sp"/>
        </RelativeLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pb_add_contact"
            android:paddingTop="89dp"
            android:paddingBottom="89dp"
            android:background="#FFFFFF"
            android:visibility="invisible"
            android:layout_gravity="center_vertical|center_horizontal"/>
    </RelativeLayout>
</FrameLayout>